<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".nun_mati_tanwin.Izhar">

    <TextView

        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idgham_title"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#000"
        />

    <TextView
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idgham_desc"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="#504E4E"
        android:textAlignment="inherit"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3CB142"
            android:text="Huruf-huruf Idgham adalah sebagai berikut: "
            android:textColor="#fff"
            android:fontFamily="@font/poppins_light"
            android:textSize="14sp"
            />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:fontFamily="@font/poppins_light"
            android:text="@string/huruf_idgham"
            android:background="#FFC107"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:src="@drawable/bilaghunnah"
            android:textColor="#504E4E" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="#FFC107"
        >
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3CB142"
            android:text="Idgham Bi La Ghunnah"
            android:textColor="#fff"
            android:fontFamily="@font/poppins_light"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:fontFamily="@font/poppins_light"
            android:text="@string/idgham_bila_gunnah_desc"
            android:background="#FFC107"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:src="@drawable/huruf_idgham"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:fontFamily="@font/poppins_light"
            android:text="Contoh Idgham Bi La Ghunnah:"
            android:background="#FFC107"
            />
        <ImageView
            android:id="@+id/img_contoh_idgham_bilagunnah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:src="@drawable/idghambi_la_ghunnah"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FF5722"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="AUDIO"
                android:fontFamily="@font/poppins_bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="#000"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FF5722"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/play2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_light"
                android:background="#00BCD4"
                android:textColor="#fff"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="Play"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pause2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_light"
                android:background="#3F51B5"
                android:textColor="#fff"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="PAUSE"/>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="#FFC107"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3CB142"
            android:text="Idgham Bi Ghunnah"
            android:textColor="#fff"
            android:fontFamily="@font/poppins_light"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:fontFamily="@font/poppins_light"
            android:text="@string/idgham_bi_gunnah_desc"
            android:background="#FFC107"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:fontFamily="@font/poppins_light"
            android:text="Contoh Idgham Bi Ghunnah:"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:src="@drawable/idghambighunnah"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FF5722"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="AUDIO"
                android:fontFamily="@font/poppins_bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="#000"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FF5722"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/play3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_light"
                android:background="#00BCD4"
                android:textColor="#fff"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="Play"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pause3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_light"
                android:background="#3F51B5"
                android:textColor="#fff"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="PAUSE"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="#FFC107"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3CB142"
            android:text="@string/pengeculian_title"
            android:textColor="#fff"
            android:fontFamily="@font/poppins_light"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:fontFamily="@font/poppins_light"
            android:text="@string/pengeculian_desc"
            android:background="#FFC107"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:fontFamily="@font/poppins_light"
            android:text="Contoh :"
            android:background="#FFC107"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/idgham_satukata"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FF5722"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="AUDIO"
                android:fontFamily="@font/poppins_bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="#000"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FF5722"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/play4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_light"
                android:background="#00BCD4"
                android:textColor="#fff"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="Play"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pause4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_light"
                android:background="#3F51B5"
                android:textColor="#fff"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="PAUSE"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</androidx.core.widget.NestedScrollView>